# Datargsing

./: .gitignore  65.5.0  LICENSE  README.md  build.bat  download_libs.bat  pyproject.toml  setup.cfg  setup.py  start.bat
.eggs/: atomicwrites-1.4.1-py3.11.egg
.eggs/pytest-7.1.2-py3.11.egg/EGG-INFO/: RECORD  requires.txt
Datargsing.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
datargsing/: __init__.py  _version.py  datargsing.py  datargsing_core.py  datargsing_tools.py  datargsing_version.py
tests/: test_datargsing.py
tests/csv/: b.csv  c.csv
tests/json/: a.json  c.json
tests/json_like/: a.jsonlike  for_csv.jsonlike  utf8.jsonlike
tests/test.test.test/: json.json
