[metadata]
name = Datargsing
version = 0.1.1
author = LTHC The Master (CHOSSY Lucas)
description = A Data management and manipulation library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LTHCTheMaster/Datargsing.git

[options]
python_requires = >=3.8.8