[metadata]
name = Datargsing
version = 0.2.13
author = LTHC The Master (CHOSSY Lucas)
maintainer = LTHC The Master (CHOSSY Lucas)
description = A Data management and manipulation library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LTHCTheMaster/Datargsing
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.11.1